--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -682,7 +682,7 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
-            <tr>
+            {#<tr>
                 <td>
                     <p>7</p>
                 </td>
@@ -710,10 +710,10 @@
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
-            </tr>
+            </tr>#}
             <tr>
                 <td>
-                    <p>8</p>
+                    <p>7</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia') }}</a></p>
@@ -742,7 +742,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>9</p>
+                    <p>8</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'treasures-of-mongolia' }) }}">{{ app.content_tours.tourName('treasures-of-mongolia') }}</a></p>
@@ -771,7 +771,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>10</p>
+                    <p>9</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'luxury-tour-with-naadam-festival' }) }}">{{ app.content_tours.tourName('luxury-tour-with-naadam-festival') }}</a></p>
@@ -800,7 +800,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>11</p>
+                    <p>10</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">{{ app.content_tours.tourName('unparalleled-luxury-tour') }}</a></p>
@@ -829,7 +829,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>12</p>
+                    <p>11</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery' }) }}">{{ app.content_tours.tourName('overland-discovery') }}</a></p>
@@ -858,7 +858,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>13</p>
+                    <p>12</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'overland-discovery-with-rural-naadam-festival' }) }}">{{ app.content_tours.tourName('overland-discovery-with-rural-naadam-festival') }}</a></p>
@@ -887,7 +887,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>14</p>
+                    <p>13</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'ultimate-mongolia' }) }}">{{ app.content_tours.tourName('ultimate-mongolia') }}</a></p>
@@ -916,7 +916,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>15</p>
+                    <p>14</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">{{ app.content_tours.tourName('western-southern-and-northern-mongolia-expedition') }}</a></p>
@@ -945,7 +945,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>9</p>
+                    <p>15</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}">{{ app.content_tours.tourName('western-southern-and-northern-mongolia-expedition') }}</a></p>
@@ -1467,6 +1467,35 @@
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'western-southern-and-northern-mongolia-expedition' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+			<tr>
+                <td>
+                    <p>17</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia-with-naadam-festival' }) }}">{{ app.content_tours.tourName('taste-of-mongolia-with-naadam-festival') }}</a></p>
+                </td>
+                <td>
+                    <p>5<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>16<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>18 persons</p>
+                </td>
+                <td>
+                    <p>5 spaces left</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
