--- a/resources/views/Tour/taste-of-mongolia.html.twig
+++ b/resources/views/Tour/taste-of-mongolia.html.twig
@@ -208,7 +208,7 @@
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Price:</b> <span>$2495 - $3295</span>
+                        <b style="color: #B28E1B">Price:</b> <span>$2895</span>
                         <br/>{#
                         <span style="font-weight: bold; color: brown"><a
                                     href="http://www.travelallmongolia.com/contact/form">
