--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -223,8 +223,8 @@
                                     href="http://www.travelallmongolia.com/contact/form">
                                 Contact us for Early Booking Discount</a></span>
                         <br/>#}
-                        {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
-                        <br/>#}
+                        <span style="font-weight: bold; color: brown">We have spevcial discount for this trip, please contact us</span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
                         <br/>
                         <span>If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you</span>
