modal close button

--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -567,6 +567,10 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
     <div class="modal fade bs-example-modal-lg" role="dialog" id="banner-modal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Special Deals! Get Early Booking Discount by September 20, 2016</h4>
+                </div>
                 <div class="modal-body">
                     <img src="/images/early-booking-discount.jpg"
                          alt="Early booking discount">
