modal header css

--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -443,6 +443,17 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
         .affix {
             position: fixed
         }
+        .modal-header {
+            padding: 15px;
+            border-bottom: 1px solid #e5e5e5;
+        }
+        .modal-header .close {
+            margin-top: -2px;
+        }
+        .modal-title {
+            margin: 0;
+            line-height: 1.42857143;
+        }
     </style>
     <script type="text/javascript">
         if ("undefined" == typeof jQuery)throw new Error("Bootstrap's JavaScript requires jQuery");
