modal header css

--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -454,6 +454,21 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
             margin: 0;
             line-height: 1.42857143;
         }
+        .modal-header button.close {
+            -webkit-appearance: none;
+            padding: 0;
+            cursor: pointer;
+            background: 0 0;
+            border: 0;
+            float: right;
+            font-size: 21px;
+            font-weight: 700;
+            line-height: 1;
+            color: #000;
+            text-shadow: 0 1px 0 #fff;
+            filter: alpha(opacity=20);
+            opacity: .2;
+        }
     </style>
     <script type="text/javascript">
         if ("undefined" == typeof jQuery)throw new Error("Bootstrap's JavaScript requires jQuery");
