--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -336,7 +336,7 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
 
         .modal-title {
             margin: 0;
-            line-height: 1.42857143
+            line-height: 40px;
         }
 
         .modal-body {
@@ -461,7 +461,7 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
             background: 0 0;
             border: 0;
             float: right;
-            font-size: 21px;
+            font-size: 40px;
             font-weight: 700;
             line-height: 1;
             color: #000;
@@ -598,7 +598,7 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
                     <h4 class="modal-title">Special Deals! Get Early Booking Discount by September 20, 2016</h4>
                 </div>
                 <div class="modal-body">
-                    <img src="/images/early-booking-discount.jpg"
+                    <img src="/images/early-booking-discount.png"
                          alt="Early booking discount">
                 </div>
             </div>
