--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -447,14 +447,14 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
             padding: 15px;
             border-bottom: 1px solid #e5e5e5;
         }
-        .modal-header .close {
+        .modal-body .close {
             margin-top: -2px;
         }
         .modal-title {
             margin: 0;
             line-height: 1.42857143;
         }
-        .modal-header button.close {
+        .modal-body button.close {
             -webkit-appearance: none;
             padding: 0;
             cursor: pointer;
@@ -464,7 +464,7 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
             font-size: 40px;
             font-weight: 700;
             line-height: 1;
-            color: #000;
+            color: #fff;
             text-shadow: 0 1px 0 #fff;
             filter: alpha(opacity=20);
             opacity: .2;
@@ -592,16 +592,11 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
     </script>
     <div class="modal fade bs-example-modal-lg" role="dialog" id="banner-modal">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Special Deals! Get Early Booking Discount by September 20, 2016</h4>
-                </div>
                 <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                     <img src="/images/early-booking-discount.png"
                          alt="Early booking discount">
                 </div>
-            </div>
         </div>
     </div>
 {% endif %}
