--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -460,14 +460,15 @@ src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value
             cursor: pointer;
             background: 0 0;
             border: 0;
-            float: right;
+            position: absolute;
+            right: 0;
+            top: 80px;
             font-size: 40px;
             font-weight: 700;
             line-height: 1;
             color: #fff;
             text-shadow: 0 1px 0 #fff;
             filter: alpha(opacity=20);
-            opacity: .2;
         }
     </style>
     <script type="text/javascript">
