Home pagenii contact information nii dood tald utas aa tawiya:

--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -177,6 +177,8 @@
                     </div>
                     <div class="hours">
                         E-Mail: info@travelallmongolia.com<br>
+                        Phone: 976-70005599 <br>
+                        Mobile: 976-99000601, 99993033
                         {#Skype: soyoloo_mongolianluxurytours#}
                     </div>
                     {#<h3 style="margin-top: 10px">ADDRESS IN UNITED STATES:</h3>
