taste of mongolia with naadam deer special gedeg ugiig buruu bichsen bna bas ene ulaanaar bichsen ug ni, link tei contact us ruu userdeg baihaar, tgd bas neg We have special discount for this trip, please contact us ugiid Taste of Mongolia bolon, Treasure of Mongolia Jewels of Mongolia deer tawiya

--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -223,7 +223,9 @@
                                     href="http://www.travelallmongolia.com/contact/form">
                                 Contact us for Early Booking Discount</a></span>
                         <br/>#}
-                        <span style="font-weight: bold; color: brown">We have spevcial discount for this trip, please contact us</span>
+                        <a href="http://www.travelallmongolia.com/contact/form">
+                            <span style="font-weight: bold; color: brown">We have special discount for this trip, please contact us</span>
+                        </a>
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
                         <br/>
