--- a/resources/views/Tour/taste-of-mongolia.html.twig
+++ b/resources/views/Tour/taste-of-mongolia.html.twig
@@ -216,7 +216,9 @@
                         <br/>#}
                         {#<span style="font-weight: bold; color: brown">$300 OFF</span>
                         <br/>#}
-                        <span style="font-weight: bold; color: brown">We have spevcial discount for this trip, please contact us</span>
+                        <a href="http://www.travelallmongolia.com/contact/form">
+                            <span style="font-weight: bold; color: brown">We have special discount for this trip, please contact us</span>
+                        </a>
                         <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$490</span>
                         <br/>
