--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -204,6 +204,10 @@
                         <br/>#}
                         {#<span style="font-weight: bold; color: brown">$300 OFF by Oct 31</span>
                         <br/>#}
+                        <a href="http://www.travelallmongolia.com/contact/form">
+                            <span style="font-weight: bold; color: brown">We have special discount for this trip, please contact us</span>
+                        </a>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$500</span>
                         <br/>
                         If you are traveling alone and wish to share a room with another participant, we will try to find a roommate for you
