testimonials nemeh geed email eer yawuulsan Steve Saks iin

--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -1,4 +1,17 @@
 
+<div class="frame_quote"><blockquote>
+    <p>
+        <em>
+            Just returned from a tour of the 5 Central Asia Stans, which I started shortly after our tour in Mongolia.
+            My daughter, son in law and I thoroughly enjoyed our tour in Mongolia.  UB was a pleasant surprise - a very lovely city, and the Gobi was exceptional.  Our guide, Bud, was fantastic, and greatly enhanced our enjoyment of the tour.  She was knowledgeable, accommodating, and just a sweet and lovely person.
+            Your Gobi Nomad Lodge facility was top notch, especially the excellent food prepared by the chef.  One suggestion is that as part of the Gobi experience, you add a dinner cooking class with the chef.  We very much enjoyed our dinner cooking experience with him.
+            Best regards and wishes for your success.
+        </em></p>
+    <p>
+        <span style="color:#8b4513;"><strong>Steve Saks</strong></span></p>
+</blockquote>
+</div>
+
 <div class="frame_quote">
     <blockquote>
         <iframe width="853" height="480" src="https://www.youtube.com/embed/t5M0Oq54hpE" frameborder="0" allowfullscreen></iframe>
