travel accommodation iin three camel lodge gesniig Gobi Nomad Lodge oor solino

--- a/resources/views/Content/travel-accomodations.html
+++ b/resources/views/Content/travel-accomodations.html
@@ -19,15 +19,15 @@
 </div>
 
 <div class="blog-content-bordered" style="font-size: 16px; margin-top: 30px;">
-    <h2>Three Camel Lodge</h2>
+    <h2>Gobi Nomad Lodge</h2>
     <strong>Traditional style and simple luxury</strong> <br/>
-    <p>Gers are the traditional felt tents of Mongolia's nomadic herders. Handmade using latticed wood structure covered with layers of felt and canvas, each ger at the Three Camel Lodge is heated by a wood stove and appointed with hand-painted wood-framed beds and furnishings.</p>
+    <p>Gers are the traditional felt tents of Mongolia's nomadic herders. Handmade using latticed wood structure covered with layers of felt and canvas, each ger at the Gobi Nomad Lodge is heated by a wood stove and appointed with hand-painted wood-framed beds and furnishings.</p>
     <p>The Lodge's twenty Deluxe Gers include a private bathroom with a toilet and sink, a king size bed and amenities such as felt slippers, Mongolian-styled bathrobes and locally produced toiletries and camel milk moisturizing lotions.</p>
-    <img title="Three Camel Lodge" src="/images/3camel-lodge_mini.jpg" alt="Three Camel Lodge" class="frame_center" style="margin-top: 20px;"/>
+    <img title="Gobi Nomad Lodge" src="/images/3camel-lodge_mini.jpg" alt="Gobi Nomad Lodge" class="frame_center" style="margin-top: 20px;"/>
     <p>The elegantly simple design of the gers blends with the Gobi's remarkable landscape, and each has a southward-facing door, a nomadic Mongolian tradition, providing an unobstructed view of the desert and the Gobi-Altai Mountains. Gers provide an authentic taste of Mongolian culture and allow travelers to visit the remote Gobi Desert in comfort, providing ideal sleeping conditions in the silence of the desert night.</p>
     <p>This is truly an oasis in the desert. Part traditional ger camp, part hotel your stay here will be a highlight of your journey. The individual gers (tents) are traditional, with wood stoves and simple style furnishings. The main lodge is built to blend into the environs, ecologically minded with solar panel and a wind-powered generator.</p>
     <strong>Amenities</strong> <br/>
-    <p>The centerpiece of the Three Camel Lodge is Dino House, built in the architectural style of a traditional Mongolian temple. Here guests will find games and a small library, and enjoy music and dance performances in the evenings.</p>
+    <p>The centerpiece of the Gobi Nomad Lodge is Dino House, built in the architectural style of a traditional Mongolian temple. Here guests will find games and a small library, and enjoy music and dance performances in the evenings.</p>
     <p>The Bulagtai Restaurant, named for the ancient volcanic outcrop that shelters the Lodge, uses locally grown organic fruits and vegetables, dairy products produced by local nomadic families and organic meat from Mongolia's free-range livestock herds to create regional dishes and traditional specialties.</p>
     <p>In the Thirsty Camel Bar, located in a naturally Geo-cooled room below the restaurant, a wide selection of beers, wines, spirits and soft drinks is available. Refreshments, snacks and locally crafted gifts may be purchased in the Lodge shop. There is also an on-site laundry service and a spa staffed by professionally trained massage therapists.</p>
 </div>
