contact information gesnii dood tald We accept geed ene zurgiig tawiya

--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -188,8 +188,10 @@
                     </div>#}
                     <a href="{{ path('contact') }}" class="notice">Send us message</a>
                 </div>
+                <div>
+                    <img src="/images/we_accept.png" alt="We accept all major credit cards" style="width: 282px !important;max-width: 300px !important; margin-top: 29px;">
+                </div>
             </div>
-            <!--/ footer col 4 -->
 
             <div class="clear"></div>
 
