tourist event iinhee zuragnuudiig tomoor ni tawibal zugeer bna

--- a/resources/views/Content/tourist-events.html
+++ b/resources/views/Content/tourist-events.html
@@ -1,13 +1,29 @@
 <h2>“Danshig” Naadam and “Khuree Tsam” Religious Festival</h2>
+<p>A project named "Hospitable Ulaanbaatar" has been successfully implemented in Ulaanbaatar during the past two years with the purpose of making the
+    city the center of regional tourism. In the framework of this project, the "Danshig" Naadam and the "Khuree Tsam" religious festival are organized
+    with the collaboration of the Gandantegchilen Monastery, Governor's Office of Ulaanbaatar, and Ulaanbaatar Tourism Department to take place
+    between the 6th and 7th of August. This cultural and religious event is held for two days at Khui Doloon Khudag which is located southwest of
+    Ulaanbaatar. The purpose of this festival is to provide tourists with cultural events during the tourist season, support the tradition and culture
+    of religion from the state, maintain religious rituals and cultural heritage, and promote them to the public as well as worldwide.
+    <br> The Danship Naadam Festival is connected to the history and practice of Buddhism in Mongolia. It represents a symbolic demonstration of unity
+    as well as a religious event for the Khalka Mongols. The first Danshig Naadam Festival was dedicated to Zanabazar in 1639 when he was identified
+    at the reincarnation of Bogd Javzandamba at the age of 5. The second Danshig Naadam was held in 1921 during the reign of the 8th Bogd Javzandamda,
+    the last Khan of Mongolia, in commemoration of the end of the Manchu Empire. The festival was a demonstration of Mongol unity and symbolized
+    Mongolian independence from the Manchu Empire. Mongolians stopped celebrating the religious festival in 1922, but it was revived in 1995 in
+    commemoration of the 380th anniversary of Zanabazar's birthday.
+    <br> The main element of the festival is the "Tsam," a religious dance that was introduced by the Tibetans in the early 18th century. The "Tsam"
+    is a complex ritual performance which is a combination of music, dance, and the intricate masks worn by the dancers.
+    <br> This is our country's most significant religious festival and consists of special chants, a ceremony to welcome the state flag, the "Tsam,"
+    the three manly games (wrestling, horse racing, and archery), knuckle shooting contest, several competitions among the monks, musical
+    performances, and a tourism fair. This event begins on August 6th in Chinggis Square with over 500 monks chanting for the well-being of the
+    Mongols. The chanting continues from 6 a.m. to 6 p.m.
+    <br> The Danshig Naadam is an interesting event for those who may have missed the State Nadaam Festival. Although it is a smaller pesentation of
+    the three manly games, 200 - 250 wrestlers participate in the wrestling tournament and approximately 190 participants from 23 teams compete in the
+    knuckle shooting contest. Several horse races, including races for mature as well as amber horses, are held at Khui Doloon Khudag.
+</p>
 <h2>
     <img src="/images/danshig_1.jpg" alt="Danshig naadam and Khuree Tsam Religious Festival"/>
 </h2>
-<p>A project named "Hospitable Ulaanbaatar" has been successfully implemented in Ulaanbaatar during the past two years with the purpose of making the city the center of regional tourism.  In the framework of this project, the "Danshig" Naadam and the "Khuree Tsam" religious festival are organized with the collaboration of the Gandantegchilen Monastery, Governor's Office of Ulaanbaatar, and Ulaanbaatar Tourism Department to take place between the 6th and 7th of August.  This cultural and religious event is held for two days at Khui Doloon Khudag which is located southwest of Ulaanbaatar.  The purpose of this festival is to provide tourists with cultural events during the tourist season, support the tradition and culture of religion from the state, maintain religious rituals and cultural heritage, and promote them to the public as well as worldwide.
-    <br>    The Danship Naadam Festival is connected to the history and practice of Buddhism in Mongolia.  It represents a symbolic demonstration of unity as well as a religious event for the Khalka Mongols.  The first Danshig Naadam Festival was dedicated to Zanabazar in 1639 when he was identified at the reincarnation of Bogd Javzandamba at the age of 5.  The second Danshig Naadam was held in 1921 during the reign of the 8th Bogd Javzandamda, the last Khan of Mongolia, in commemoration of the end of the Manchu Empire.  The festival was a demonstration of Mongol unity and symbolized Mongolian independence from the Manchu Empire.  Mongolians stopped celebrating the religious festival in 1922, but it was revived in 1995 in commemoration of the 380th anniversary of Zanabazar's birthday.
-    <br>    The main element of the festival is the "Tsam," a religious dance that was introduced by the Tibetans in the early 18th century.  The "Tsam" is a complex ritual performance which is a combination of music, dance, and the intricate masks worn by the dancers.
-    <br>    This is our country's most significant religious festival and consists of special chants, a ceremony to welcome the state flag, the "Tsam," the three manly games (wrestling, horse racing, and archery), knuckle shooting contest, several competitions among the monks, musical performances, and a tourism fair.  This event begins on August 6th in Chinggis Square with over 500 monks chanting for the well-being of the Mongols.  The chanting continues from  6 a.m. to 6 p.m.
-    <br>    The Danshig Naadam is an interesting event for those who may have missed the State Nadaam Festival.  Although it is a smaller pesentation of the three manly games, 200 - 250 wrestlers participate in the wrestling tournament and approximately 190 participants from 23 teams compete in the knuckle shooting contest.  Several horse races, including races for mature as well as amber horses, are held at Khui Doloon Khudag.
-</p>
 <hr>
 
 <h2>The Ice Festival</h2>
@@ -19,6 +35,7 @@
 <h2>
     <img src="/images/ice_1.jpg" alt="The Ice Festival"/>
 </h2>
+<hr>
 
 <h2>Camel Festival </h2>
 <p>Mongolians refer to this as the “Thousand Camel Festival” and it is a celebration of the “Bactrian” (two hump) camel.
@@ -29,6 +46,7 @@
 <h2>
     <img src="/images/camel_1.jpg" alt="Camel Festival"/>
 </h2>
+<hr>
 
 <h2>Yak Festival </h2>
 <p>Only China has more yaks than Mongolia. The yak festival takes place in July in the central and northern provinces of
@@ -42,9 +60,9 @@
     and “The Best Handcrafted Products Made of Yak Raw Materials.” The awards are presented by domestic companies.
 </p>
 <h2>
-    <img src="/images/yak_1.jpg" alt="Yak Festival "/>
     <img src="/images/yak_2.jpg" alt="Yak Festival "/>
 </h2>
+<hr>
 
 <h2>The Mongols in Deel – Traditional Costume Show</h2>
 <p>Mongolians celebrate the traditional costume show each year in July following the Naadam, The Three Manly Games.
@@ -56,6 +74,7 @@
     <img src="/images/deel_2.jpg" alt="The Mongols in Deel – Traditional Costume Show"/>
     <img src="/images/deel_1.jpg" alt="The Mongols in Deel – Traditional Costume Show"/>
 </h2>
+<hr>
 
 <h2>Eagle festival</h2>
 <p>Every year during the first week of October, the &ldquo;Eagle festival&rdquo; is celebrated in Bayan Ulgii, in the
@@ -83,9 +102,11 @@
     origin of polo several riders fight for the possession of a dead goat. Horse races and archery tournaments round off
     the festival. Although it&rsquo;s a long way from Ulaanbaatar, the trip is well worth it. There is no other place on
     earth where you can see so many golden eagles at close range.</p>
-<h2><img src="/images/eagle_1.jpg" alt="Mongolian Adventure Tours"/><img src="/images/eagle_2.jpg"
-                                                                         alt="Mongolian Adventure Tours"/><img
-        src="/images/eagle_3.jpg" alt="Mongolian Adventure Tours"/></h2>
+<h2><img src="/images/eagle_1.jpg" alt="Eagle festival - Travel All Mongolia"/>
+    <img src="/images/eagle_2.jpg" alt="Eagle festival - Travel All Mongolia"/>
+</h2>
+<hr>
+
 <h2 id="naadam">Naadam Festival</h2>
 <p>The Mongolian national holiday Naadam is celebrated in Mongolia each year on 11 July. &ldquo;Eriin gurvan naadam&rdquo;
     the three manly games of wrestling, horse racing, and archery- make up the core activities of the National day
@@ -126,9 +147,11 @@
     arrows have been shot. They praise the best shot in a drawing recitative voice. The contests are accompanied by
     colorful national rites. Before the competition starts you hear the recitative song &ldquo;uukhai&rdquo;, calling on
     the archers to be good marksmen and hit the target.</p>
-<h2><img src="/images/naadam_1.jpg" alt="Mongolian Adventure Tours"/><img src="/images/naadam_2.jpg"
-                                                                          alt="Mongolian Adventure Tours"/><img
-        src="/images/naadam_3.jpg" alt="Mongolian Adventure Tours"/></h2>
+<h2><img src="/images/naadam_1.jpg" alt="Naadam Festival - Travel All Mongolia"/>
+    <img src="/images/naadam_2.jpg" alt="Naadam Festival - Travel All Mongolia"/>
+</h2>
+<hr>
+
 <h2>Tsagaan sar</h2>
 <p>Tsagaansar or White Month is one of Mongolia&rsquo;s two major and long awaited holidays, the other being Naadam in
     July. Tsagaansar or White Month, the first month of spring, has been one of the most important celebrations of the
