deed menu deer Our Lodge gsn link uusgeed orhoor ni odoohondoo ene 2 video tawichiya wetransfer ar yawuulaw

--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -137,6 +137,7 @@
                     <li><a href="{{ path('homepage') }}"><span>Home</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'about-us'}) }}"><span>About us</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'testimonials'}) }}"><span>Testimonials</span></a></li>
+                    <li><a href="{{ path('page_show', {'slug':'our-lodge'}) }}"><span>Our Lodge</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'mongolian-arts-and-culture'}) }}"><span>Mongolian Arts and Culture</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'terms-and-conditions'}) }}"><span>Terms & Conditions</span></a></li>
                     <li><a href="{{ path('page_show', {'slug':'privacy-policy'}) }}"><span>Privacy Statement</span></a></li>
