--- a/resources/views/_header.html.twig
+++ b/resources/views/_header.html.twig
@@ -99,6 +99,7 @@
                     <ul class="submenu-1">
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'why-travel-with-us'}) }}"><span>Why Travel With Us</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'testimonials'}) }}"><span>Testimonials</span></a></li>
+                        <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'our-lodge'}) }}"><span>Our Lodge</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('page_show', {'slug':'experience-luxury-in-mongolia'}) }}"><span>Experience luxury in Mongolia</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('catalog') }}"><span>Request a brochure</span></a></li>
                         <li class="menu-level-1"><a href="{{ path('contact') }}"><span>Contact us</span></a></li>
