ene aylal deer http://www.travelallmongolia.com/tour/jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake.html#.V_mVPfl97IU July 3-14, July 8-19, 2017 gedeg date tawiya

--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -914,6 +914,64 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>15</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake') }}</a></p>
+                </td>
+                <td>
+                    <p>3<sup>rd</sup> of July, 2017</p>
+                </td>
+                <td>
+                    <p>14<sup>th</sup> of July, 2017</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>16</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake' }) }}">{{ app.content_tours.tourName('jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake') }}</a></p>
+                </td>
+                <td>
+                    <p>8<sup>th</sup> of July, 2017</p>
+                </td>
+                <td>
+                    <p>19<sup>th</sup> of July, 2017</p>
+                </td>
+                <td>
+                    <p>2 - 18 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'jewels-of-mongolia-with-rural-naadam-festival-in-khuvsgul-lake' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
